# VueDjango

./: .gitignore  gulpfile.js  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
Demo/: router.py  settings.py  urls.py
room/: apps.py  models.py  router.py  serializers.py  viewsets.py
room/migrations/: 0001_initial.py
userprofile/: forms.py  models.py  serializer.py  viewsets.py
userprofile/migrations/: 0001_initial.py
video/: urls.py  views.py
video/static/vue/: App.vue  site.js
video/static/vue/components/: Landing.vue  LandingVideo.vue  Login.vue  Navbar.vue  VideoItem.vue  VideoList.vue
video/static/vue/components/navbar/: BrandItem.vue
video/static/vue/components/room/: RoomItem.vue  RoomList.vue
video/static/vue/store/: store.js
video/templates/video/: base.html  homepage.html
